# OOP_Project

./: CMakeLists.txt  ProjectMainFile.cpp  main.cpp  recent_files.h  save_load.cpp  save_load.h  test.cpp  test.h
Exceptions/: Exceptions.h
Model/: Capacitor.h  CurrentSource.h  Element.cpp  Element.h  Inductor.h  Node.cpp  Node.h  Resistor.cpp  Resistor.h  VoltageSource.h
ProgramController/: Circuit.cpp  Circuit.h
View/: View.cpp  View.h
